@@ -42,8 +42,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.confluentcloud.inputs.DnsForwarderEnvironmentArgs;
  * import com.pulumi.confluentcloud.inputs.DnsForwarderGatewayArgs;
  * import com.pulumi.confluentcloud.inputs.DnsForwarderForwardViaIpArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -97,8 +97,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.confluentcloud.DnsForwarderArgs;
  * import com.pulumi.confluentcloud.inputs.DnsForwarderEnvironmentArgs;
  * import com.pulumi.confluentcloud.inputs.DnsForwarderGatewayArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -125,7 +125,7 @@ import javax.annotation.Nullable;
  *             .gateway(DnsForwarderGatewayArgs.builder()
  *                 .id(mainConfluentNetwork.gateway()[0].id())
  *                 .build())
- *             .forwardViaGcpZones(List.of(Map.of("domainMappings", Map.of("example.com", "zone-1,project-1"))))
+ *             .forwardViaGcpZones(Arrays.asList(Map.of("domainMappings", Map.of("example.com", "zone-1,project-1"))))
  *             .build());
  * 
  *     }
